# asterisk-cpp

./: .gitignore  .travis.yml  Makefile  README.md
asterisk-cpp/: .cproject  .gitignore  .project  Makefile.am  autogen.sh  configure.ac
asterisk-cpp/asteriskcpp/: Manager.hpp  manager.hpp
asterisk-cpp/asteriskcpp/exceptions/: Exception.h  ExceptionHandler.h  IOException.h  RuntimeException.h
asterisk-cpp/asteriskcpp/manager/: Actions.hpp  AsteriskVersion.h  Dispatcher.h  EventBuilder.h  Events.hpp  ManagerConnection.h  ManagerEventListener.h  ManagerEventsHandler.h  ManagerResponsesHandler.h  Reader.h  ResponseBuilder.h  Writer.h
asterisk-cpp/asteriskcpp/manager/actions/: AbsoluteTimeoutAction.h  AbstractManagerAction.h  AbstractMeetMeMuteAction.h  AgentCallbackLoginAction.h  AgentLogoffAction.h  AgentsAction.h  AgiAction.h  AtxferAction.h  BridgeAction.h  ChallengeAction.h  ChangeMonitorAction.h  CommandAction.h  ConfbridgeKickAction.h  ConfbridgeListAction.h  ConfbridgeListRoomsAction.h  ConfbridgeLockAction.h  ConfbridgeMuteAction.h  ConfbridgeSetSingleVideoSrcAction.h  ConfbridgeStartRecordAction.h  ConfbridgeStopRecordAction.h  ConfbridgeUnlockAction.h  ConfbridgeUnmuteAction.h  CoreSettingsAction.h  CoreShowChannelsAction.h  CoreStatusAction.h  DahdiShowChannelsAction.h  DbDelAction.h  DbDelTreeAction.h  DbGetAction.h  DbPutAction.h  EventsAction.h  ExtensionStateAction.h  GetConfigAction.h  GetVarAction.h  HangupAction.h  IaxPeerListAction.h  JabberSendAction.h  ListCommandsAction.h  LocalOptimizeAwayAction.h  LoginAction.h  (+51 more)
asterisk-cpp/asteriskcpp/manager/events/: AbstractAgentEvent.h  AbstractChannelEvent.h  AbstractChannelStateEvent.h  AbstractFaxEvent.h  AbstractMeetMeEvent.h  AbstractMonitorEvent.h  AbstractParkedCallEvent.h  AbstractQueueMemberEvent.h  AbstractRtcpEvent.h  AbstractRtpStatEvent.h  AgentCallbackLoginEvent.h  AgentCallbackLogoffEvent.h  AgentCalledEvent.h  AgentCompleteEvent.h  AgentConnectEvent.h  AgentDumpEvent.h  AgentLoginEvent.h  AgentLogoffEvent.h  AgentRingNoAnswer.h  AgentsCompleteEvent.h  AgentsEvent.h  AgiExecEvent.h  AlarmClearEvent.h  AlarmEvent.h  AsyncAgiEvent.h  BridgeEvent.h  BridgeExecEvent.h  CdrEvent.h  ChannelReloadEvent.h  ChannelUpdateEvent.h  ConfbridgeEndEvent.h  ConfbridgeJoinEvent.h  ConfbridgeLeaveEvent.h  ConfbridgeListCompleteEvent.h  ConfbridgeListEvent.h  ConfbridgeListRoomsCompleteEvent.h  ConfbridgeListRoomsEvent.h  ConfbridgeStartEvent.h  ConfbridgeTalkingEvent.h  ConnectEvent.h  (+104 more)
asterisk-cpp/asteriskcpp/manager/responses/: ChallengeResponse.h  CommandResponse.h  CoreSettingsResponse.h  CoreStatusResponse.h  ExtensionStateResponse.h  GetConfigResponse.h  GetVarResponse.h  MailboxCountResponse.h  MailboxStatusResponse.h  ManagerError.h  ManagerResponse.h  ModuleCheckResponse.h  PingResponse.h  SipShowPeerResponse.h  SkypeBuddyResponse.h  SkypeLicenseStatusResponse.h
asterisk-cpp/asteriskcpp/net/: IPAddress.h  SSLContext.h  SSLSocket.h  TCPSocket.h
asterisk-cpp/asteriskcpp/structs/: PropertyMap.h  Singleton.h  SynchronisedQueue.h  Thread.h
asterisk-cpp/asteriskcpp/utils/: Base64.h  LogHandler.h  MD5.h  StringUtils.h  timesupport.h
asterisk-cpp/examples/: Test.cpp  makeTest.sh  t.cpp
asterisk-cpp/src/: Makefile.am
asterisk-cpp/src/exceptions/: Exception.cpp  ExceptionHandler.cpp  IOException.cpp  Makefile.am  RuntimeException.cpp
asterisk-cpp/src/manager/: AsteriskVersion.cpp  Dispatcher.cpp  EventBuilder.cpp  ManagerConnection.cpp  ManagerEventListener.cpp  ManagerEventsHandler.cpp  ManagerResponsesHandler.cpp  Reader.cpp  ResponseBuilder.cpp  Writer.cpp
asterisk-cpp/src/manager/actions/: AbsoluteTimeoutAction.cpp  AbstractManagerAction.cpp  AbstractMeetMeMuteAction.cpp  AgentCallbackLoginAction.cpp  AgentLogoffAction.cpp  AgentsAction.cpp  AgiAction.cpp  AtxferAction.cpp  BridgeAction.cpp  ChallengeAction.cpp  ChangeMonitorAction.cpp  CommandAction.cpp  ConfbridgeKickAction.cpp  ConfbridgeListAction.cpp  ConfbridgeListRoomsAction.cpp  ConfbridgeLockAction.cpp  ConfbridgeMuteAction.cpp  ConfbridgeSetSingleVideoSrcAction.cpp  ConfbridgeStartRecordAction.cpp  ConfbridgeStopRecordAction.cpp  ConfbridgeUnlockAction.cpp  ConfbridgeUnmuteAction.cpp  CoreSettingsAction.cpp  CoreShowChannelsAction.cpp  CoreStatusAction.cpp  DahdiShowChannelsAction.cpp  DbDelAction.cpp  DbDelTreeAction.cpp  DbGetAction.cpp  DbPutAction.cpp  EventsAction.cpp  ExtensionStateAction.cpp  GetConfigAction.cpp  GetVarAction.cpp  HangupAction.cpp  IaxPeerListAction.cpp  JabberSendAction.cpp  ListCommandsAction.cpp  LocalOptimizeAwayAction.cpp  LoginAction.cpp  (+51 more)
asterisk-cpp/src/manager/events/: AbstractAgentEvent.cpp  AbstractChannelEvent.cpp  AbstractChannelStateEvent.cpp  AbstractFaxEvent.cpp  AbstractMeetMeEvent.cpp  AbstractMonitorEvent.cpp  AbstractParkedCallEvent.cpp  AbstractQueueMemberEvent.cpp  AbstractRtcpEvent.cpp  AbstractRtpStatEvent.cpp  AgentCallbackLoginEvent.cpp  AgentCallbackLogoffEvent.cpp  AgentCalledEvent.cpp  AgentCompleteEvent.cpp  AgentConnectEvent.cpp  AgentDumpEvent.cpp  AgentLoginEvent.cpp  AgentLogoffEvent.cpp  AgentRingNoAnswer.cpp  AgentsCompleteEvent.cpp  AgentsEvent.cpp  AgiExecEvent.cpp  AlarmClearEvent.cpp  AlarmEvent.cpp  AsyncAgiEvent.cpp  DahdiShowChannelsCompleteEvent.cpp  DahdiShowChannelsEvent.cpp  JabberEventEvent.cpp  JitterBufStatsEvent.cpp  JoinEvent.cpp  LeaveEvent.cpp  LinkEvent.cpp  ListDialplanEvent.cpp  LogChannelEvent.cpp  ManagerEvent.cpp  MasqueradeEvent.cpp  MeetMeEndEvent.cpp  MeetMeJoinEvent.cpp  MeetMeLeaveEvent.cpp  MeetMeMuteEvent.cpp  (+72 more)
asterisk-cpp/src/manager/responses/: ChallengeResponse.cpp  CommandResponse.cpp  CoreSettingsResponse.cpp  CoreStatusResponse.cpp  ExtensionStateResponse.cpp  GetConfigResponse.cpp  GetVarResponse.cpp  MailboxCountResponse.cpp  MailboxStatusResponse.cpp  ManagerError.cpp  ManagerResponse.cpp  (+5 more)
asterisk-cpp/src/net/: IPAddress.cpp  SSLContext.cpp  SSLSocket.cpp  TCPSocket.cpp
asterisk-cpp/src/structs/: PropertyMap.cpp  Singleton.cpp  Thread.cpp
asterisk-cpp/src/utils/: Base64.cpp  LogHandler.cpp  MD5.cpp  StringUtils.cpp  timesupport.cpp
