AUTOMAKE_OPTIONS = foreign

AM_CXXFLAGS=-I$(abs_top_builddir) -Wall -g3
AM_CFLAGS= $(DEFINES) -Wall -g3
AM_DEFAULT_SOURCE_EXT = .cpp
ACLOCAL_AMFLAGS = -I m4

libasteriskcpp_LDADD=-lcurl -lboost_date_time -lboost_iostreams -lboost_system -lboost_regex -lboost_thread -lboost_filesystem -llog4cplus -lssl -lcrypto

lib_LTLIBRARIES=libasteriskcpp.la
libasteriskcpp_la_CFLAGS=-fPIC
libasteriskcpp_la_CPPFLAGS=-fPIC
libasteriskcpp_la_CXXFLAGS=-fPIC
libasteriskcpp_la_LDFLAGS= -shared -fPIC

libasteriskcpp_la_SOURCES= \
	src/structs/Singleton.cpp \
	src/structs/Thread.cpp \
	src/structs/PropertyMap.cpp \
	src/exceptions/IOException.cpp \
	src/exceptions/Exception.cpp \
	src/exceptions/ExceptionHandler.cpp \
	src/exceptions/RuntimeException.cpp \
	src/net/SSLSocket.cpp \
	src/net/IPAddress.cpp \
	src/net/TCPSocket.cpp \
	src/net/SSLContext.cpp \
	src/utils/MD5.cpp \
	src/utils/timesupport.cpp \
	src/utils/StringUtils.cpp \
	src/utils/Base64.cpp \
	src/utils/LogHandler.cpp \
	src/manager/ResponseBuilder.cpp \
	src/manager/AsteriskVersion.cpp \
	src/manager/Writer.cpp \
	src/manager/Reader.cpp \
	src/manager/ManagerResponsesHandler.cpp \
	src/manager/ManagerEventListener.cpp \
	src/manager/ManagerEventsHandler.cpp \
	src/manager/ManagerConnection.cpp \
	src/manager/EventBuilder.cpp \
	src/manager/events/SkypeBuddyEntryEvent.cpp \
	src/manager/events/AsyncAgiEvent.cpp \
	src/manager/events/NewExtenEvent.cpp \
	src/manager/events/ModuleLoadReportEvent.cpp \
	src/manager/events/UserEvent.cpp \
	src/manager/events/OriginateResponseEvent.cpp \
	src/manager/events/StatusCompleteEvent.cpp \
	src/manager/events/QueueSummaryCompleteEvent.cpp \
	src/manager/events/MeetMeTalkingEvent.cpp \
	src/manager/events/LeaveEvent.cpp \
	src/manager/events/MeetMeMuteEvent.cpp \
	src/manager/events/UnlinkEvent.cpp \
	src/manager/events/QueueMemberPausedEvent.cpp \
	src/manager/events/RtpSenderStatEvent.cpp \
	src/manager/events/RegistryEntryEvent.cpp \
	src/manager/events/JoinEvent.cpp \
	src/manager/events/MeetMeJoinEvent.cpp \
	src/manager/events/AbstractFaxEvent.cpp \
	src/manager/events/QueueMemberAddedEvent.cpp \
	src/manager/events/OriginateSuccessEvent.cpp \
	src/manager/events/ZapShowChannelsEvent.cpp \
	src/manager/events/AgentConnectEvent.cpp \
	src/manager/events/AlarmEvent.cpp \
	src/manager/events/QueueSummaryEvent.cpp \
	src/manager/events/SkypeLicenseEvent.cpp \
	src/manager/events/LogChannelEvent.cpp \
	src/manager/events/ParkedCallsCompleteEvent.cpp \
	src/manager/events/ShutdownEvent.cpp \
	src/manager/events/SkypeLicenseListCompleteEvent.cpp \
	src/manager/events/MeetMeLeaveEvent.cpp \
	src/manager/events/DahdiShowChannelsCompleteEvent.cpp \
	src/manager/events/VarSetEvent.cpp \
	src/manager/events/AgentCompleteEvent.cpp \
	src/manager/events/AbstractChannelStateEvent.cpp \
	src/manager/events/UnparkedCallEvent.cpp \
	src/manager/events/ManagerEvent.cpp \
	src/manager/events/AbstractRtpStatEvent.cpp \
	src/manager/events/QueueMemberEvent.cpp \
	src/manager/events/PeerlistCompleteEvent.cpp \
	src/manager/events/RegistrationsCompleteEvent.cpp \
	src/manager/events/AbstractChannelEvent.cpp \
	src/manager/events/MonitorStopEvent.cpp \
	src/manager/events/ReloadEvent.cpp \
	src/manager/events/AbstractQueueMemberEvent.cpp \
	src/manager/events/SendFaxEvent.cpp \
	src/manager/events/NewAccountCodeEvent.cpp \
	src/manager/events/AgiExecEvent.cpp \
	src/manager/events/QueueParamsEvent.cpp \
	src/manager/events/MessageWaitingEvent.cpp \
	src/manager/events/AgentCallbackLoginEvent.cpp \
	src/manager/events/AgentDumpEvent.cpp \
	src/manager/events/LinkEvent.cpp \
	src/manager/events/PeerStatusEvent.cpp \
	src/manager/events/ParkedCallEvent.cpp \
	src/manager/events/QueueEntryEvent.cpp \
	src/manager/events/SkypeBuddyListCompleteEvent.cpp \
	src/manager/events/SkypeBuddyStatusEvent.cpp \
	src/manager/events/AgentsEvent.cpp \
	src/manager/events/JabberEventEvent.cpp \
	src/manager/events/AbstractRtcpEvent.cpp \
	src/manager/events/AbstractAgentEvent.cpp \
	src/manager/events/QueueEvent.cpp \
	src/manager/events/OriginateFailureEvent.cpp \
	src/manager/events/RtcpReceivedEvent.cpp \
	src/manager/events/VoicemailUserEntryCompleteEvent.cpp \
	src/manager/events/ListDialplanEvent.cpp \
	src/manager/events/MasqueradeEvent.cpp \
	src/manager/events/SendFaxStatusEvent.cpp \
	src/manager/events/T38FaxStatusEvent.cpp \
	src/manager/events/MusicOnHoldEvent.cpp \
	src/manager/events/QueueMemberStatusEvent.cpp \
	src/manager/events/AgentLoginEvent.cpp \
	src/manager/events/RegistryEvent.cpp \
	src/manager/events/SkypeChatMessageEvent.cpp \
	src/manager/events/NewStateEvent.cpp \
	src/manager/events/AgentCalledEvent.cpp \
	src/manager/events/UnholdEvent.cpp \
	src/manager/events/AbstractMonitorEvent.cpp \
	src/manager/events/AbstractMeetMeEvent.cpp \
	src/manager/events/MeetMeEndEvent.cpp \
	src/manager/events/PriEventEvent.cpp \
	src/manager/events/VoicemailUserEntryEvent.cpp \
	src/manager/events/ProtocolIdentifierReceivedEvent.cpp \
	src/manager/events/MeetMeTalkingRequestEvent.cpp \
	src/manager/events/AlarmClearEvent.cpp \
	src/manager/events/NewCallerIdEvent.cpp \
	src/manager/events/NewChannelEvent.cpp \
	src/manager/events/AgentRingNoAnswer.cpp \
	src/manager/events/JitterBufStatsEvent.cpp \
	src/manager/events/QueueCallerAbandonEvent.cpp \
	src/manager/events/PeerEntryEvent.cpp \
	src/manager/events/QueueStatusCompleteEvent.cpp \
	src/manager/events/QueueMemberRemovedEvent.cpp \
	src/manager/events/ParkedCallGiveUpEvent.cpp \
	src/manager/events/AgentsCompleteEvent.cpp \
	src/manager/events/MonitorStartEvent.cpp \
	src/manager/events/StatusEvent.cpp \
	src/manager/events/ShowDialplanCompleteEvent.cpp \
	src/manager/events/ReceiveFaxEvent.cpp \
	src/manager/events/RtcpSentEvent.cpp \
	src/manager/events/RtpReceiverStatEvent.cpp \
	src/manager/events/AgentLogoffEvent.cpp \
	src/manager/events/ParkedCallTimeOutEvent.cpp \
	src/manager/events/QueueMemberPenaltyEvent.cpp \
	src/manager/events/SkypeAccountStatusEvent.cpp \
	src/manager/events/AgentCallbackLogoffEvent.cpp \
	src/manager/events/DahdiShowChannelsEvent.cpp \
	src/manager/events/MeetMeStopTalkingEvent.cpp \
	src/manager/events/RenameEvent.cpp \
	src/manager/events/TransferEvent.cpp \
	src/manager/events/ZapShowChannelsCompleteEvent.cpp \
	src/manager/events/AbstractParkedCallEvent.cpp \
	src/manager/responses/ChallengeResponse.cpp \
	src/manager/responses/ManagerResponse.cpp \
	src/manager/responses/ManagerError.cpp \
	src/manager/responses/CommandResponse.cpp \
	src/manager/actions/AbstractManagerAction.cpp \
	src/manager/actions/AbsoluteTimeoutAction.cpp \
	src/manager/actions/AbstractMeetMeMuteAction.cpp \
	src/manager/actions/AgentCallbackLoginAction.cpp \
	src/manager/actions/ChallengeAction.cpp \
	src/manager/actions/CommandAction.cpp \
	src/manager/actions/EventsAction.cpp \
	src/manager/actions/ListCommandsAction.cpp \
	src/manager/actions/LoginAction.cpp \
	src/manager/actions/LogoffAction.cpp \
	src/manager/actions/ManagerAction.cpp 

instdir = $(includedir)

nobase_inst_HEADERS= \
	asteriskcpp/Manager.hpp \
	asteriskcpp/structs/Singleton.h \
	asteriskcpp/structs/SynchronisedQueue.h \
	asteriskcpp/structs/Thread.h \
	asteriskcpp/structs/PropertyMap.h \
	asteriskcpp/exceptions/RuntimeException.h \
	asteriskcpp/exceptions/IOException.h \
	asteriskcpp/exceptions/Exception.h \
	asteriskcpp/exceptions/ExceptionHandler.h \
	asteriskcpp/net/IPAddress.h \
	asteriskcpp/net/TCPSocket.h \
	asteriskcpp/net/SSLSocket.h \
	asteriskcpp/net/SSLContext.h \
	asteriskcpp/utils/Base64.h \
	asteriskcpp/utils/LogHandler.h \
	asteriskcpp/utils/MD5.h \
	asteriskcpp/utils/StringUtils.h \
	asteriskcpp/utils/timesupport.h \
	asteriskcpp/manager/Actions.hpp \
	asteriskcpp/manager/AsteriskVersion.h \
	asteriskcpp/manager/ManagerEventListener.h \
	asteriskcpp/manager/ResponseBuilder.h \
	asteriskcpp/manager/Reader.h \
	asteriskcpp/manager/ManagerResponsesHandler.h \
	asteriskcpp/manager/ManagerConnection.h \
	asteriskcpp/manager/Dispatcher.h \
	asteriskcpp/manager/Writer.h \
	asteriskcpp/manager/ManagerEventsHandler.h \
	asteriskcpp/manager/Events.hpp \
	asteriskcpp/manager/EventBuilder.h \
	asteriskcpp/manager/events/StatusEvent.h \
	asteriskcpp/manager/events/QueueMemberPausedEvent.h \
	asteriskcpp/manager/events/DtmfEvent.h \
	asteriskcpp/manager/events/MessageWaitingEvent.h \
	asteriskcpp/manager/events/LogChannelEvent.h \
	asteriskcpp/manager/events/SkypeBuddyStatusEvent.h \
	asteriskcpp/manager/events/PeerStatusEvent.h \
	asteriskcpp/manager/events/MonitorStopEvent.h \
	asteriskcpp/manager/events/DndStateEvent.h \
	asteriskcpp/manager/events/AbstractChannelEvent.h \
	asteriskcpp/manager/events/RtpReceiverStatEvent.h \
	asteriskcpp/manager/events/QueueMemberPenaltyEvent.h \
	asteriskcpp/manager/events/JoinEvent.h \
	asteriskcpp/manager/events/ConfbridgeListRoomsCompleteEvent.h \
	asteriskcpp/manager/events/JitterBufStatsEvent.h \
	asteriskcpp/manager/events/AgentsCompleteEvent.h \
	asteriskcpp/manager/events/ChannelUpdateEvent.h \
	asteriskcpp/manager/events/SkypeBuddyListCompleteEvent.h \
	asteriskcpp/manager/events/NewStateEvent.h \
	asteriskcpp/manager/events/RenameEvent.h \
	asteriskcpp/manager/events/SkypeBuddyEntryEvent.h \
	asteriskcpp/manager/events/HoldedCallEvent.h \
	asteriskcpp/manager/events/CdrEvent.h \
	asteriskcpp/manager/events/MonitorStartEvent.h \
	asteriskcpp/manager/events/RtcpSentEvent.h \
	asteriskcpp/manager/events/AgentRingNoAnswer.h \
	asteriskcpp/manager/events/ListDialplanEvent.h \
	asteriskcpp/manager/events/BridgeExecEvent.h \
	asteriskcpp/manager/events/ParkedCallsCompleteEvent.h \
	asteriskcpp/manager/events/NewChannelEvent.h \
	asteriskcpp/manager/events/FaxDocumentStatusEvent.h \
	asteriskcpp/manager/events/AgentCalledEvent.h \
	asteriskcpp/manager/events/OriginateResponseEvent.h \
	asteriskcpp/manager/events/DahdiShowChannelsEvent.h \
	asteriskcpp/manager/events/QueueSummaryEvent.h \
	asteriskcpp/manager/events/NewExtenEvent.h \
	asteriskcpp/manager/events/AgentLogoffEvent.h \
	asteriskcpp/manager/events/AbstractQueueMemberEvent.h \
	asteriskcpp/manager/events/SkypeLicenseListCompleteEvent.h \
	asteriskcpp/manager/events/AbstractChannelStateEvent.h \
	asteriskcpp/manager/events/ShutdownEvent.h \
	asteriskcpp/manager/events/NewCallerIdEvent.h \
	asteriskcpp/manager/events/LinkEvent.h \
	asteriskcpp/manager/events/PeerlistCompleteEvent.h \
	asteriskcpp/manager/events/QueueParamsEvent.h \
	asteriskcpp/manager/events/RegistryEntryEvent.h \
	asteriskcpp/manager/events/RegistryEvent.h \
	asteriskcpp/manager/events/RegistrationsCompleteEvent.h \
	asteriskcpp/manager/events/SkypeAccountStatusEvent.h \
	asteriskcpp/manager/events/ZapShowChannelsCompleteEvent.h \
	asteriskcpp/manager/events/MeetMeMuteEvent.h \
	asteriskcpp/manager/events/AbstractMeetMeEvent.h \
	asteriskcpp/manager/events/ChannelReloadEvent.h \
	asteriskcpp/manager/events/QueueCallerAbandonEvent.h \
	asteriskcpp/manager/events/ParkedCallTimeOutEvent.h \
	asteriskcpp/manager/events/SendFaxEvent.h \
	asteriskcpp/manager/events/AgentCompleteEvent.h \
	asteriskcpp/manager/events/AgentCallbackLoginEvent.h \
	asteriskcpp/manager/events/UnparkedCallEvent.h \
	asteriskcpp/manager/events/QueueEvent.h \
	asteriskcpp/manager/events/TransferEvent.h \
	asteriskcpp/manager/events/JabberEventEvent.h \
	asteriskcpp/manager/events/ConnectEvent.h \
	asteriskcpp/manager/events/ResponseEvent.h \
	asteriskcpp/manager/events/BridgeEvent.h \
	asteriskcpp/manager/events/UnholdEvent.h \
	asteriskcpp/manager/events/QueueSummaryCompleteEvent.h \
	asteriskcpp/manager/events/UserEvent.h \
	asteriskcpp/manager/events/FaxStatusEvent.h \
	asteriskcpp/manager/events/NewAccountCodeEvent.h \
	asteriskcpp/manager/events/ParkedCallGiveUpEvent.h \
	asteriskcpp/manager/events/StatusCompleteEvent.h \
	asteriskcpp/manager/events/AgiExecEvent.h \
	asteriskcpp/manager/events/OriginateFailureEvent.h \
	asteriskcpp/manager/events/AbstractFaxEvent.h \
	asteriskcpp/manager/events/AgentsEvent.h \
	asteriskcpp/manager/events/ReceiveFaxEvent.h \
	asteriskcpp/manager/events/RtcpReceivedEvent.h \
	asteriskcpp/manager/events/ModuleLoadReportEvent.h \
	asteriskcpp/manager/events/AgentCallbackLogoffEvent.h \
	asteriskcpp/manager/events/AgentDumpEvent.h \
	asteriskcpp/manager/events/PeerEntryEvent.h \
	asteriskcpp/manager/events/AbstractMonitorEvent.h \
	asteriskcpp/manager/events/ExtensionStatusEvent.h \
	asteriskcpp/manager/events/FaxReceivedEvent.h \
	asteriskcpp/manager/events/DisconnectEvent.h \
	asteriskcpp/manager/events/SkypeLicenseEvent.h \
	asteriskcpp/manager/events/ConfbridgeEndEvent.h \
	asteriskcpp/manager/events/QueueMemberEvent.h \
	asteriskcpp/manager/events/AgentLoginEvent.h \
	asteriskcpp/manager/events/FullyBootedEvent.h \
	asteriskcpp/manager/events/ReloadEvent.h \
	asteriskcpp/manager/events/DbGetResponseEvent.h \
	asteriskcpp/manager/events/ManagerEvent.h \
	asteriskcpp/manager/events/QueueStatusCompleteEvent.h \
	asteriskcpp/manager/events/AlarmClearEvent.h \
	asteriskcpp/manager/events/VarSetEvent.h \
	asteriskcpp/manager/events/ParkedCallEvent.h \
	asteriskcpp/manager/events/SendFaxStatusEvent.h \
	asteriskcpp/manager/events/DialEvent.h \
	asteriskcpp/manager/events/AlarmEvent.h \
	asteriskcpp/manager/events/AsyncAgiEvent.h \
	asteriskcpp/manager/events/MasqueradeEvent.h \
	asteriskcpp/manager/events/CoreShowChannelEvent.h \
	asteriskcpp/manager/events/ConfbridgeListRoomsEvent.h \
	asteriskcpp/manager/events/CoreShowChannelsCompleteEvent.h \
	asteriskcpp/manager/events/ShowDialplanCompleteEvent.h \
	asteriskcpp/manager/events/AgentConnectEvent.h \
	asteriskcpp/manager/events/ProtocolIdentifierReceivedEvent.h \
	asteriskcpp/manager/events/ConfbridgeStartEvent.h \
	asteriskcpp/manager/events/AbstractRtcpEvent.h \
	asteriskcpp/manager/events/SkypeChatMessageEvent.h \
	asteriskcpp/manager/events/MeetMeLeaveEvent.h \
	asteriskcpp/manager/events/MeetMeTalkingRequestEvent.h \
	asteriskcpp/manager/events/RtpSenderStatEvent.h \
	asteriskcpp/manager/events/ConfbridgeListCompleteEvent.h \
	asteriskcpp/manager/events/HangupEvent.h \
	asteriskcpp/manager/events/QueueMemberRemovedEvent.h \
	asteriskcpp/manager/events/UnlinkEvent.h \
	asteriskcpp/manager/events/OriginateSuccessEvent.h \
	asteriskcpp/manager/events/QueueMemberAddedEvent.h \
	asteriskcpp/manager/events/AbstractRtpStatEvent.h \
	asteriskcpp/manager/events/MeetMeTalkingEvent.h \
	asteriskcpp/manager/events/AbstractParkedCallEvent.h \
	asteriskcpp/manager/events/ConfbridgeTalkingEvent.h \
	asteriskcpp/manager/events/MeetMeJoinEvent.h \
	asteriskcpp/manager/events/MusicOnHoldEvent.h \
	asteriskcpp/manager/events/LeaveEvent.h \
	asteriskcpp/manager/events/ZapShowChannelsEvent.h \
	asteriskcpp/manager/events/MeetMeEndEvent.h \
	asteriskcpp/manager/events/T38FaxStatusEvent.h \
	asteriskcpp/manager/events/ConfbridgeListEvent.h \
	asteriskcpp/manager/events/QueueMemberStatusEvent.h \
	asteriskcpp/manager/events/HoldEvent.h \
	asteriskcpp/manager/events/PriEventEvent.h \
	asteriskcpp/manager/events/AbstractAgentEvent.h \
	asteriskcpp/manager/events/ConfbridgeJoinEvent.h \
	asteriskcpp/manager/events/VoicemailUserEntryCompleteEvent.h \
	asteriskcpp/manager/events/QueueEntryEvent.h \
	asteriskcpp/manager/events/DahdiShowChannelsCompleteEvent.h \
	asteriskcpp/manager/events/VoicemailUserEntryEvent.h \
	asteriskcpp/manager/events/ConfbridgeLeaveEvent.h \
	asteriskcpp/manager/events/MeetMeStopTalkingEvent.h \
	asteriskcpp/manager/responses/ManagerError.h \
	asteriskcpp/manager/responses/CommandResponse.h \
	asteriskcpp/manager/responses/ChallengeResponse.h \
	asteriskcpp/manager/responses/ManagerResponse.h \
	asteriskcpp/manager/actions/AbsoluteTimeoutAction.h \
	asteriskcpp/manager/actions/AbstractManagerAction.h \
	asteriskcpp/manager/actions/AbstractMeetMeMuteAction.h \
	asteriskcpp/manager/actions/AgentCallbackLoginAction.h \
	asteriskcpp/manager/actions/ChallengeAction.h \
	asteriskcpp/manager/actions/CommandAction.h \
	asteriskcpp/manager/actions/EventsAction.h \
	asteriskcpp/manager/actions/ListCommandsAction.h \
	asteriskcpp/manager/actions/LoginAction.h \
	asteriskcpp/manager/actions/LogoffAction.h \
	asteriskcpp/manager/actions/ManagerAction.h 

